<resources>
    <string name="app_name">GeoGuess</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiZ2lhbGx1NCIsImEiOiJjbG40aGx0bWkwMGx6MnVxbWJqMjVmZ283In0.QoVREiZMGzWTmFeNZyA5Pw</string>

    <string name="game_description">Ready to test your geography knowledge?</string>
    <string name="single_player_game_textview">Single Player Game</string>
    <string name="single_player_game_textview_contentdesc">Select to start a Single Player Game</string>
    <string name="single_player_game">Single player game</string>
    <string name="single_player_image_contentdesc">Single Player Logo</string>
    <string name="two_player_game">Two player game</string>
    <string name="two_player_image_contentdesc">Two Player Logo</string>

    <string name="dialog_title">Enter players\' names</string>
    <string name="dialog_positive_button">Let\'s play!</string>
    <string name="player_one_name_editText_in_dialog">Player 1 name</string>
    <string name="player_two_name_editText_in_dialog">Player 2 name</string>

    <string name="location_to_guess">City to guess: %1$s</string>
    <string name="default_player_one_name">Player 1</string>
    <string name="default_player_two_name">Player 2</string>
    <string name="player_one_points">%1$s: %2$d %3$s</string>
    <string name="player_two_points">%1$s: %2$d %3$s</string>
    <string name="points">points</string>
    <string name="player_guess_distance_won">Nice job !! Your guess was %1$s kilometers away from %2$s ...</string>
    <string name="player_guess_distance_loss">Your guess was %1$s kilometers away from %2$s , A bit too far ...</string>
    <string name="home_distance_from_city">It was also %1$s kilometers away from You!\n If you take off right now, you may still be in time !!</string>
    <string name="player_two_turn_to_guess">%1$s\'s turn to guess</string>
    <string name="winner_announcement">%1$s wins! Next round begins ...</string>

    <string name="logged_user_name">%1$s %2$s</string>

    <string name="user_name_surname">nome cognome</string>
    <string name="phone_number">338 5678746</string>
    <string name="logout_text">Logout</string>
    <string name="played_games_label">Games Played</string>
    <string name="game_played_number">1000</string>
    <string name="game_won_label">Single Player Wins</string>
    <string name="game_won_number">10.0000</string>
    <string name="total_kilometres_label">Total Kilometres</string>
    <string name="total_kilometres_number">1.000.0000</string>
    <string name="email_value">email@gmail.com</string>
    <string name="id_code">000001</string>

    <string name="delete_account">Delete Account</string>


</resources>