<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/graylight"
    android:orientation="vertical">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/TextAppearanceContextMenu" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <!--<ImageView
                android:id="@+id/back_arrow_id"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:clickable="true"
                android:importantForAccessibility="no"
                android:soundEffectsEnabled="false"
                android:src="@drawable/back_arrow"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck"
                android:focusable="true"></ImageView>-->

            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/profile_icon_id"
                    android:background="@drawable/gradientbackground"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:importantForAccessibility="no"
                    android:src="@drawable/user_default_icon"
                    tools:ignore="ImageContrastCheck"/>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/profile_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/user_name_surname"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"></TextView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/played_games_label"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:id="@+id/games_played_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/game_played_number"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/game_won_label"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:id="@+id/single_wins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/game_won_number"
                        android:paddingTop="10dp"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/total_kilometres_label"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:id="@+id/total_kilometres_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/total_kilometres_number"
                        android:textColor="@color/startblue"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck"></TextView>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:src="@drawable/id_icon"
                tools:ignore="ImageContrastCheck" />
            <TextView
                android:id="@+id/id_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/id_code"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:src="@drawable/mail_icon"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/email_id"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/email_value">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:src="@drawable/phone_icon"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="30dp">

        <Button
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logout_button_style"
            android:text="@string/logout_text"
            android:textColor="#fff"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>

