<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainbackground"
    android:id="@+id/main_activity"
    tools:context=".MainActivity"
    >

    <ViewSwitcher
        android:id="@+id/viewswitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginStart="65dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                app:cardElevation="3dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@android:color/transparent">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/user_default_icon"
                android:clickable="true"
                android:soundEffectsEnabled="false"
                android:importantForAccessibility="no"
                android:focusable="true" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/logged_user_name"
                android:textStyle="italic|bold"
                android:clickable="true"
                android:soundEffectsEnabled="false"
                android:textColor="#FF9800"
                android:textSize="20sp"
                android:focusable="true" />

        </LinearLayout>



    </ViewSwitcher>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@android:color/transparent"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/main_logo"
        android:src="@drawable/geoguessmaintitle"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:importantForAccessibility="no"
        android:visibility="invisible"
        tools:ignore="VisualLintBounds" />

    </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="200dp"
                android:gravity="center_horizontal"
                android:text="@string/game_description"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/single_player_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/single_player_game_textview"
                android:contentDescription="@string/single_player_game_textview_contentdesc"
                app:cardElevation="50dp"
                app:cardMaxElevation="100dp"
                app:cardCornerRadius="500dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" >


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/gradientbutton"
                    tools:ignore="ImageContrastCheck" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/single_player_game_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/single_player_game"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                    <ImageView
                        android:id="@+id/single_player_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/single_player_image_contentdesc"
                        android:src="@drawable/ic_single_person_white_24dp"
                        tools:ignore="ImageContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/multi_player_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/single_player_game_textview"
                app:cardElevation="50dp"
                app:cardMaxElevation="100dp"
                app:cardCornerRadius="500dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/single_player_button"
                tools:ignore="VisualLintBounds">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/gradientbuttontwo"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/two_player_game_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/two_player_game"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                    <ImageView
                        android:id="@+id/two_player_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/two_player_image_contentdesc"
                        android:src="@drawable/ic_two_people_white_24dp"
                        tools:ignore="ImageContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>